Initial draft of the evaluation chapter

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1007,3 +1007,19 @@ year = {2018},
   year={2014},
   organization={IEEE}
 }
+
+% GQM
+@article{van2002goal,
+  title={Goal question metric (gqm) approach},
+  author={Van Solingen, Rini and Basili, Vic and Caldiera, Gianluigi and Rombach, H Dieter},
+  journal={Encyclopedia of software engineering},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@misc{OMPython,
+  author = {Open Source Modelica Consortium},
+  title = {OpenModelica Python Interface and PySimulator},
+  year = {2022},
+  howpublished = {\url{https://openmodelica.org/doc/OpenModelicaUsersGuide/latest/ompython.html}}
+}
