--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -47,6 +47,6 @@
     \capitulo{BSN}{Running Example: Body Sensor Network}
     \capitulo{4_Proposal}{Enhancing Property Specification of Cyber-Physical Systems using Negative Selection}
     \capitulo{3_RelatedWork}{Related work}
-    \capitulo{5_Evaluation}{Schedule}
+    \capitulo{5_Evaluation}{Evaluation}
     % \capitulo{6_Conclusion}{Conclusion and future work}
 \end{document}%
